Fix code visibility in lightmode (#220)
* remove imgur from index

Since the following commit in the main repo, the imgur is not by default part of
Flameshot and is optionally compiled:

https://github.com/flameshot-org/flameshot/pull/4034

So here I removed the upload feature from the index page while keeping the https://flameshot.org/docs/guide/imgur-help/

* code blocks now have dark bg color

This is a temp fix until I find enough time to make it dynamically change
according to light/dark mode

* move Docs in the header to left

This is is mainly because on smaller screens like phones, the Docs (which is the
important part of the website) was not visible

--- a/sass/components/_code.scss
+++ b/sass/components/_code.scss
@@ -16,7 +16,7 @@ code {
 
 code:not([class]){
   border-radius: 4px;
-  background-color: #ffefef;
+  background-color: #3f263a;
 }
 
 // p code {
